syntax = "proto3";

package pkg;
option go_package = "pkg/servicespb";

service Provider {
    rpc Provide(ProvideLogsRequest) returns (ProvideLogsResponse) {};
}

message ProvideLogsResponse{
    string logs = 1;
    int64 dateGenerated = 2;
    string providerService = 3;
}

message ProvideLogsRequest{
    string providerService = 1;
}

message ReceiveLogsRequest {
    ProvideLogsResponse logs = 1;
}

message ResponseStatus {
  int32 status = 1;
}

message DeleteRequest {
  string id = 1;
}

service Receiver {
    rpc Receive(ReceiveLogsRequest) returns (ResponseStatus) {};
    rpc Fetch(Filters) returns (FetchResponse) {};
    rpc Delete(DeleteRequest) returns (ResponseStatus) {};
}

service Visualizer {
    rpc Visualize(VisualizeRequest) returns (VisualizeResponse) {};
}

message Filters {
  int64 page = 1;
  int64 pageSize = 2;
  string match = 3;
  int64 dateGeneratedBefore = 4;
  int64 dateGeneratedAfter = 5;
  int64 lengthLess = 6;
  int64 lengthGreater = 7;
}

message VisualizeRequest {
  Filters filters = 1;
  FetchResponse logs = 2;
}

message FetchedLogs {
  string id = 1;
  string logs = 2;
  int64 length = 3;
  int64 dateGenerated = 4;
  int64 dateSaved = 5;
  string providerService = 6;
  string receiverService = 7;
}

message VisualizeInfo {
  string logs = 1;
  int64 length = 2;
  int64 dateGenerated = 3;
  int64 dateSaved = 4;
  string providerService = 5;
  string receiverService = 6;
  int64 diffGeneratedSaved = 7;
}

message FetchResponse {
  repeated FetchedLogs logs = 1;
}

message VisualizeResponse {
  repeated VisualizeInfo info = 1;
}